# Multi-Agent-Research-Orchestrator-with-MCP-Integration

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  makefile  pyproject.toml  terraform.tfstate
.github/workflows/: cd.yml  ci.yml
configs/: init.sql
evals/: golden_dataset.py  phoenix_evals.py  regression_detector.py  regression_metrics.py  regression_runner.py  requirements.txt
evals/baselines/: current.json
scripts/: init.sh  setup-gcp.sh
src/a2a/: __init__.py  client.py  models.py  router.py
src/agents/fact_check/: Dockerfile  app.py
src/agents/search/: Dockerfile  app.py
src/agents/summarize/: Dockerfile  app.py
src/mcp_servers/knowledge/: Dockerfile  server.py
src/mcp_servers/search/: Dockerfile  cache.py  config.py  searcher.py  server.py
src/mcp_servers/summarization/: Dockerfile  config.py  server.py  token_budget.py
src/orchestrator/: Dockerfile  app.py  docker-compose.yml  supervisor.py
src/orchestrator/agent/: __init__.py
src/orchestrator/api/: __init__.py
src/orchestrator/gateway/: __init__.py
src/orchestrator/planner/: __init__.py
src/shared/logging/: __init__.py
src/shared/tracing/: __init__.py
terraform/: README.md  cloud_run.tf  cloud_sql.tf  main.tf  memorystore.tf  outputs.tf  secrets.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  terraform.tfvars.example  variables.tf  vpc.tf
tests/integration/: test_integration.py
tests/unit/: test_a2a.py  test_supervisor.py
